# wry-sync-javascript-eval

./: Cargo.toml  README.md  agents.md  automated-fix-tests.sh  build.rs  diff-api.sh
.github/workflows/: main.yml
benches/: batching.rs  main.rs  roundtrip.rs
dioxus-web-testing/: Cargo.toml
dioxus-web-testing/src/: main.rs
docs/: batch-mode-callback-limitation.md
examples/: canvas.rs  dom.rs  paint.rs  simple.rs
examples/dioxus-web/: Cargo.toml
examples/dioxus-web/src/: main.rs
examples/gloo/: Cargo.toml
examples/gloo/src/: main.rs
examples/openstreetmap/: Cargo.toml
examples/openstreetmap/src/: main.rs
examples/piet/: Cargo.toml
examples/piet/src/: main.rs
examples/tiptap/: Cargo.toml
examples/tiptap/src/: main.rs
examples/web-sys/: canvas.rs  dom.rs  paint.rs
examples/yew/: Cargo.toml
examples/yew/src/: main.rs
gloo-testing/: Cargo.toml
gloo-testing/src/: main.rs
piet-testing/: Cargo.toml
piet-testing/src/: main.rs
shims/wasm-bindgen/: Cargo.toml
shims/wasm-bindgen-macro/: Cargo.toml
shims/wasm-bindgen-macro/src/: lib.rs
shims/wasm-bindgen/src/: lib.rs
src/: bindings.rs  encoder.rs  home.rs  ipc.rs  lib.rs  main.rs  webview.rs  wry_bindgen.rs
src/js/: hash.txt  heap.js  main.js
src/ts/: encoding.ts  function_registry.ts  heap.ts  ipc.ts  main.ts  rust_exports.ts  rust_function.ts  types.ts
tests/main_thread_tests/: async_bindings.rs  borrow_stack.rs  callbacks.rs  catch_attribute.rs  clamped.rs  jsvalue.rs  main.rs  module_import.rs  roundtrip.rs  run_on_main_thread.rs  string_enum.rs  structs.rs  thread_local.rs
wry-bindgen/: Cargo.toml  build.rs
wry-bindgen-macro/: Cargo.toml
wry-bindgen-macro-support/: Cargo.toml
wry-bindgen-macro-support/src/: ast.rs  codegen.rs  lib.rs  parser.rs
wry-bindgen-macro/src/: lib.rs
wry-bindgen/src/: batch.rs  cast.rs  convert.rs  encode.rs  function.rs  function_registry.rs  intern.rs  ipc.rs  js_helpers.rs  lazy.rs  lib.rs  object_store.rs  runtime.rs  value.rs  wry.rs
wry-bindgen/src/js/: convert.js  hash.txt  main.js
wry-bindgen/src/ts/: convert.ts  encoding.ts  heap.ts  ipc.ts  main.ts  rust_exports.ts  rust_function.ts
wry-launch/: Cargo.toml
wry-launch/benches/: batching.rs  main.rs
wry-launch/examples/: canvas.rs  dom.rs  paint.rs
wry-launch/src/: lib.rs  webview.rs
wry-launch/tests/main_thread_tests/: add_number_js.rs  async_bindings.rs  callbacks.rs  catch_attribute.rs  indexing.rs  is_type_of.rs  main.rs  reentrant_callbacks.rs  roundtrip.rs  structs.rs  thread_local.rs
wry-testing/: Cargo.toml
wry-testing/benches/: main.rs
wry-testing/src/: home.rs  lib.rs  webview.rs
wry-testing/tests/main_thread_tests/: add_number_js.rs  async_bindings.rs  callbacks.rs  main.rs  string_enum.rs
yew-testing/: Cargo.toml
yew-testing/src/: main.rs
