[workspace]
members = [".", "wry-bindgen", "wry-bindgen-macro", "wry-bindgen-macro-support", "examples/gloo", "examples/dioxus-web", "examples/yew", "examples/piet", "examples/tiptap",  "examples/openstreetmap"]
exclude = ["wasm-bindgen"]
resolver = "2"

[package]
name = "wry-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytemuck = "1.24.0"
inventory = "0.3.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34"
wry = { version = "0.53.5", features = ["devtools"] }
wasm-bindgen = { path = "wry-bindgen" }
wasm-bindgen-macro = { package = "wry-bindgen-macro", path = "wry-bindgen-macro" }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = "0.18"

[build-dependencies]
lazy-js-bundle = { git = "https://github.com/DioxusLabs/dioxus" }

[dev-dependencies]
web-sys = { path = "wasm-bindgen/crates/web-sys", features = ["CssStyleDeclaration", "Element", "HtmlElement", "Window", "CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "MouseEvent"] }
wasm-bindgen-futures = { path = "wasm-bindgen/crates/futures" }
js-sys = { path = "wasm-bindgen/crates/js-sys" }
futures-channel = "0.3.31"
rand = "0.9.2"

[[test]]
name = "main_thread_tests"
path = "tests/main_thread_tests/main.rs"
harness = false

[[bench]]
name = "main_thread_benches"
path = "benches/main.rs"
harness = false

[patch.crates-io]
wasm-bindgen = { path = "wry-bindgen" }
wasm-bindgen-futures = { path = "wasm-bindgen/crates/futures" }
js-sys = { path = "wasm-bindgen/crates/js-sys" }
web-sys = { path = "wasm-bindgen/crates/web-sys" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"

[lints]
workspace = true
