[workspace]
members = [
    "wry-testing",
    "wry-bindgen",
    "wry-bindgen-macro",
    "wry-bindgen-macro-support",
    "shims/wasm-bindgen-macro",
    "examples/gloo",
    "examples/dioxus-web",
    "examples/yew",
    "examples/piet",
    "examples/tiptap",
    "examples/openstreetmap"
]
exclude = ["wasm-bindgen"]
resolver = "2"

[patch.crates-io]
wasm-bindgen = { path = "shims/wasm-bindgen", package = "wasm-bindgen" }

[workspace.lints]
