[package]
name = "wry-bindgen-macro-support"
version = "0.2.106-alpha.1"
edition = "2024"
description = "Internal macro support for wry-bindgen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }
[lints]
workspace = true
