[package]
name = "wasm-bindgen"
version = "0.2.105"
edition = "2024"

[features]
default = ["std"]
std = []
enable-interning = []

[dependencies]
base64 = "0.22"
bytemuck = "1.14"
inventory = "0.3.21"
slotmap = { version = "1.0" }
wry-bindgen-macro = { path = "../wry-bindgen-macro" }
# We use this instead of std because wasm bindgen supports no_std environments
once_cell = { version = "1.21.3", features = ["critical-section"] }
spin = "0.10.0"
futures-core = "0.3.31"
pollster = "0.4.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
async-channel = "2.5.0"

[build-dependencies]
lazy-js-bundle = { git = "https://github.com/DioxusLabs/dioxus" }

[lints]
workspace = true
