[package]
name = "wry-bindgen"
version = "0.2.106-alpha.1"
edition = "2024"
description = "Native desktop implementation of wasm-bindgen APIs using wry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[features]
default = ["std"]
std = []
enable-interning = []
msrv = []

[dependencies]
base64 = "0.22"
bytemuck = "1.14"
inventory = "0.3.21"
wry-bindgen-macro = { path = "../wry-bindgen-macro", version = "=0.2.106-alpha.1" }
# We use this instead of std because wasm bindgen supports no_std environments
once_cell = { version = "1.21.3", features = ["critical-section"] }
spin = "0.10.0"
futures-core = "0.3.31"
pollster = "0.4.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
async-channel = "2.5.0"
http = "1.4.0"

[build-dependencies]
lazy-js-bundle = "0.7.2"

[lints]
workspace = true
