[package]
name = "wry-launch"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytemuck = "1.24.0"
inventory = "0.3.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34"
wry = { version = "0.53.5", features = ["devtools"] }
wasm-bindgen = { path = "../shims/wasm-bindgen", package = "wasm-bindgen-x" }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = "0.18"

[build-dependencies]
lazy-js-bundle = { git = "https://github.com/DioxusLabs/dioxus" }

[dev-dependencies]
web-sys = { path = "../wasm-bindgen/crates/web-sys", package = "web-sys-x", features = ["CssStyleDeclaration", "Element", "HtmlElement", "Window", "CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "MouseEvent"] }
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures", package = "wasm-bindgen-futures-x" }
js-sys = { path = "../wasm-bindgen/crates/js-sys", package = "js-sys-x" }
futures-channel = "0.3.31"
rand = "0.9.2"

[[test]]
name = "main_thread_tests"
path = "tests/main_thread_tests/main.rs"
harness = false

[[bench]]
name = "main_thread_benches"
path = "benches/main.rs"
harness = false

[[example]]
name = "canvas"
path = "examples/canvas.rs"

[[example]]
name = "dom"
path = "examples/dom.rs"

[[example]]
name = "paint"
path = "examples/paint.rs"

[lints]
workspace = true
