[package]
name = "gloo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
gloo = { version = "0.11.0", features = ["futures"] }
wasm-bindgen = "0.2.54"
wasm-bindgen-futures = { version = "0.4.56" }
console_error_panic_hook = "0.1.7"
futures-util = "0.3"
wry-testing = { version = "0.1.0", path = "../.." }

[dependencies.web-sys]
version = "0.3.19"
features = ["console", "Window", "Document", "HtmlDocument", "HtmlElement", "Element", "Node"]
[lints]
workspace = true
