[package]
name = "openstreetmap"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.54"
wasm-bindgen-futures = "0.4.56"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
wry-testing = { version = "0.1.0", path = "../.." }

[dependencies.web-sys]
version = "0.3.19"
features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "Node",
    "HtmlHeadElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "EventTarget",
]

[lints]
workspace = true
