[package]
name = "piet"
version = "0.1.0"
edition = "2024"

[dependencies]
piet = { version = "0.8", features = ["samples"] }
piet-web = { version = "0.8" }

wasm-bindgen = "0.2.100"
wry-testing = { version = "0.1.0", path = "../.." }

[dependencies.web-sys]
version = "0.3.77"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"]

[lints]
workspace = true
