[package]
name = "tiptap-example"
version = "0.1.0"
edition = "2024"

[dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "HtmlElement",
    "Element",
    "Node",
    "Window",
    "HtmlHeadElement",
    "DomTokenList",
] }
wry-testing = { version = "0.1.0", path = "../../wry-testing" }
wasm-bindgen = { version = "0.2.106", package = "wasm-bindgen" }
leptos-tiptap-build = "0.2.8"

[lints]
workspace = true
