[package]
name = "yew"
version = "0.1.0"
edition = "2024"

[dependencies]
wry-testing = { version = "0.1.0", path = "../.." }
wasm-bindgen-futures = { path = "../../wasm-bindgen/crates/futures" }
tokio = { version = "1.28.2", features = ["full"] }
yew = { version = "0.22.0", features = ["csr"] }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
serde_derive = "1"
gloo = "0.11"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
[lints]
workspace = true
