[package]
name = "wasm-bindgen-macro"
version = "0.2.106"
edition = "2024"
description = "Shim macro that expands to both wasm-bindgen and wry-bindgen implementations"

[lib]
proc-macro = true

[dependencies]
wry-bindgen-macro-support = { path = "../../wry-bindgen-macro-support" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true
