[package]
name = "wasm-bindgen-macro"
version = "0.2.106-alpha.0"
edition = "2024"
description = "Shim macro that expands to both wasm-bindgen and wry-bindgen implementations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[lib]
proc-macro = true

[dependencies]
wry-bindgen-macro-support = { path = "../../wry-bindgen-macro-support", version = "=0.2.106-alpha.0" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true
