[package]
name = "wasm-bindgen-x"
version = "0.2.106-alpha.1"
edition = "2024"
description = "Shim crate that re-exports either wry-bindgen (desktop) or wasm-bindgen (wasm32)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[features]
default = ["std"]
std = []
enable-interning = []
msrv = []

[dependencies]
wasm-bindgen-macro = { path = "../wasm-bindgen-macro", package = "wasm-bindgen-macro-x", version = "=0.2.106-alpha.1" }

# Desktop implementation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry-bindgen = { path = "../../wry-bindgen", version = "=0.2.106-alpha.1" }

# wasm32 implementation
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"

[lints]
workspace = true
